WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208596
Assertion failed: shouldBeActive() in BackgroundProcessResponsivenessTimer::responsivenessCheckTimerFired()
https://bugs.webkit.org/show_bug.cgi?id=208596
Summary
Assertion failed: shouldBeActive() in BackgroundProcessResponsivenessTimer::r...
Sihui Liu
Reported
2020-03-04 13:24:02 PST
...
Attachments
Patch
(1.69 KB, patch)
2020-03-04 13:26 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-03-04 13:26:05 PST
Created
attachment 392467
[details]
Patch
Chris Dumez
Comment 2
2020-03-05 08:43:49 PST
Comment on
attachment 392467
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2020-03-05 09:41:36 PST
Comment on
attachment 392467
[details]
Patch Clearing flags on attachment: 392467 Committed
r257921
: <
https://trac.webkit.org/changeset/257921
>
WebKit Commit Bot
Comment 4
2020-03-05 09:41:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-03-05 09:44:20 PST
<
rdar://problem/60087486
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug