Source/WebKit/UIProcess/WebProcessProxy.cpp
@@ -1711,6 +1711,7 @@ void WebProcessProxy::disableServiceWorkers()
         return;
 
     m_serviceWorkerInformation = { };
+    updateBackgroundResponsivenessTimer();
 
 #if ENABLE(SERVICE_WORKER)
     processPool().removeFromServiceWorkerProcesses(*this);
@@ -1754,6 +1755,7 @@ void WebProcessProxy::enableServiceWorkers(const Optional<UserContentControllerI
         nullptr,
         { }
     };
+    updateBackgroundResponsivenessTimer();
 #if ENABLE(SERVICE_WORKER)
     updateServiceWorkerProcessAssertion();
 #endif
